# tnfoview

./: .cz.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  THIRDPARTY.md  cp437.cpp  cp437.h  main.cpp  package.json  qrc_nfoviewer.cpp  sh.tat.tnfoview.yml  snapcraft.yaml  ta_nfoviewer.pro  vcpkg.json
.claude/agents/: regen.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/: zizmor.yml
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  flatpak.yml  pages.yml  release.yml  snap.yml  tests.yml
src/: CMakeLists.txt  Info.plist.in  cp437.c  cp437.h  extra-uninstall.nsh.in  extra.nsh.in  main.cpp  nfoviewer.cpp  nfoviewer.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  sh.tat.tnfoview.metainfo.xml.in  tnfoview.desktop.in  version.rc.in
tests/: CMakeLists.txt  cp437test.cpp
